# zsl

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.en.md  README.md  clang_format.py  config.h.in  demo.cpp  main.cpp  test.asv  test.m  zsl_demmo.sln  zsl_demmo.vcxproj  zsl_demmo.vcxproj.filters
doc/: 00-Introduction.md  01-Basics.md
doc/02 Language Fundamentals/: 02-Language Fundamentals.md  2.3 Operators and Elementary Operations.md
matplotplusplus/: CMakeLists.txt
matplotplusplus/source/: matplot.sln  matplot.vcxproj  matplot.vcxproj.filters
matplotplusplus/source/matplot/axes_objects/: matrix.cpp  matrix.h
matplotplusplus/source/matplot/core/: line_spec.cpp
matplotplusplus/source/matplot/util/: common.cpp
script/style/: clang_format.py  defines.py
test/: CMakeLists.txt
test/basics/: CMakeLists.txt  std_vector_op.cpp  test_check.cpp
test/zatlab/: CMakeLists.txt  test_matrices_and_arrays.cpp
test/zatlab/data_import_and_analysis/: CMakeLists.txt  test_data_import_and_export.cpp  test_data_process.cpp  test_data_process.m  test_descriptive_statistics.asv  test_descriptive_statistics.cpp  test_descriptive_statistics.m
test/zatlab/language_fundamental/: CMakeLists.txt
test/zatlab/language_fundamental/operators_and_elementary_operations/: CMakeLists.txt  test_arithmetic_operations.cpp
test/zatlab/mathematics/: CMakeLists.txt  test_elementary_math.cpp  test_fourier_analysis_and_filtering.cpp  test_fourier_analysis_and_filtering.m  test_interp.asv  test_interp.m  test_interpolation.cpp  test_rand.cpp
test/zatlab/mathematics/elementary_math/: CMakeLists.txt  X.csv  Y.csv  test_constants_and_test_matrices.cpp  test_elementary_math.cpp  test_elementary_math.m  test_trigonometry.cpp  w.csv
test_deps/csv/: CMakelists.txt  csv.h  test_csv.cpp
zsl/: CMakeLists.txt  main.cpp  zsl.sln  zsl.vcxproj  zsl.vcxproj.filters
zsl--/: main.cpp  zsl.vcxproj
zsl--/src/: ZException.cpp  std_vector_op.cpp
zsl-cmake/: CMakeLists.txt  main.cpp
zsl-cmake/test/: CMakeLists.txt  CMakeLists.txt--bad  test_std_vector_op.cpp
zsl-cmake/test/basics/: std_vector_op.cpp
zsl-cmake/test/zatlab/: test_matrices_and_arrays.cpp
zsl-cmake/zsl/: CMakeLists.txt
zsl-cmake/zsl/include/basics/: ZException.h  basics.h  defines.h  std_vector_op.h
zsl-cmake/zsl/include/zatlab/language_fundamental/: matrices_and_arrays.h
zsl-cmake/zsl/include/zsl/: std_vector_op.h
zsl-cmake/zsl/src/: ZException.cpp  std_vector_op.cpp
zsl-cmake/zsl/src/basics/: ZException.cpp  std_vector_op.cpp
zsl-cmake/zsl/src/zatlab/language_fundamental/: matrices_and_arrays.cpp
zsl-cmake/zsl/src/zsl/: std_vector_op.cpp
zsl/include/: zsl.h
zsl/include/basics/: ZException.h  basics.h  check.h  copy_control.h  defines.h  std_vector_op.h
zsl/include/zatlab/: zatlab.h
zsl/include/zatlab/data_import_and_analysis/: data_import_and_analysis.h  data_import_and_export.h  data_process.h  descriptive_statistics.h
zsl/include/zatlab/language_fundamental/: matrices_and_arrays.h
zsl/include/zatlab/language_fundamentals/: language_fundamental.h  matrices_and_arrays.h
zsl/include/zatlab/language_fundamentals/operators_and_elementary_operations/: arithmetic_operations.h  operators_and_elementary_operations.h
zsl/include/zatlab/mathematics/: elementary_math.h  fourier_analysis_and_filtering.h  interpolation.h  mathematics.h  random_number_generation.h
zsl/include/zatlab/mathematics/elementary_math/: complex_numbers.h  constants_and_test_matrices.h  elementary_math.h  elementary_math_temp.h  exponents_and_logarithms.h  trigonometry.h
zsl/include/zsl/: ZException.h
zsl/src/: ZException.cpp
zsl/src/basics/: ZException.cpp  std_vector_op.cpp
zsl/src/zatlab/data_import_and_analysis/: csv.h  data_import_and_export.cpp  data_process.cpp  descriptive_statistics.cpp
zsl/src/zatlab/language_fundamental/: matrices_and_arrays.cpp  matrices_and_arrays_indexing.cpp
zsl/src/zatlab/language_fundamental/operators_and_elementary_operations/: arithmetic_operations.cpp
zsl/src/zatlab/language_fundamentals/: matrices_and_arrays.cpp  matrices_and_arrays_indexing.cpp
zsl/src/zatlab/language_fundamentals/operators_and_elementary_operations/: arithmetic_operations.cpp
zsl/src/zatlab/mathematics/: elementary_math.cpp  fourier_analysis_and_filtering.cpp  interpolation.cpp  random_number_generation.cpp
zsl/src/zatlab/mathematics/elementary_math/: complex_numbers.cpp  constants_and_test_matrices.cpp  exponents_and_logarithms.cpp  trigonometry.cpp
